
4.1.7
 + Core string hash features "save_string" "read_string"
 + Added lookup acceleration to code index data
 + Added highlighting for functions, types, and macros in code index
 + Default input is now dispatched through an "implicit map" callback
 + Fix: crash when pasting in read only buffer

4.1.6
 + In config.4coder "bind_by_physical_key" uses a key-layout that does not change with language
 + Deprecated GlyphFlag_Rotate90, rotation of immediate mode text is entirely derived from the delta vector
 + New API view_(set/get)_camera_bounds, controls the margin and push in values when the cursor is out of view
 + Durring isearch the vertical margin is extended to make text above/below the cursor visible
 + Fix: notepad like mode scrolling only creates selection when holding mouse L-buttoon
 + Fix: on windows the window has the 4coder icon
 + Fix: various keyboard input issues on windows, linux, and mac
 + Fix: by default platform layer uses key codes arranged by the system language
 + Fix: printing for list_all_functions_* commands skips whitespace and controls format directly

4.1.5
 + MAJOR: Scratch_Blocks now take arena pointer parameters in their constructor to specify arenas that should be treated as having distinct lifetimes, without doing this it is possible that a local scratch and another arena will actually refer to the same allocator and freeing the local scratch will also free memory that was meant to be in a separate arena.
 + MAJOR: HookID_BufferEditRange now takes the "old_cursor_range" instead of the "original_size"
 + Date_Time system APIs, and Date_Time string formatting
 + 'clean_all_lines' removes trailing whitespace and removes blank lines
 + 'clean_trailing_whitespace' leaves blank lines
 + In config.4coder "enable_output_wrapping" determine whether to wrap buffers like *compilation*, *search*, etc.
 + In config.4coder "default_tab_width" determines the width of a tab character in number of spaces