@@ -1,23 +1,0 @@
-/*
- * Mr. 4th Dimention - Allen Webster
- *
- * 01.10.2019
- *
- * Search list helper.
- *
- */
-
-// TOP
-
-#if !defined(FRED_SEARCH_LIST_H)
-#define FRED_SEARCH_LIST_H
-
-struct Path_Search_List{
-    List_String_Const_u8 list;
-    u64 max_member_length;
-};
-
-#endif
-
-// BOTTOM
-
